--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-17.5
-
+#resolver: lts-17.5
+resolver: lts-18.18
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
@@ -44,10 +44,13 @@ packages:
 # flags: {}
 extra-deps:
 - align-0.1.1.2
+#- fasta-0.10.4.2
 - fasta-0.10.4.2
-- pipes-4.3.14
-- pipes-text-0.0.2.5
-- pipes-safe-2.3.2
+- pipes-text-1.0.0
+- MissingH-1.4.3.0
+#- pipes-4.3.14
+#- pipes-text-0.0.2.5
+#- pipes-safe-2.3.2
 - Unique-0.4.7.9
 
 # Extra package databases containing global packages
